--- a/index.html
+++ b/index.html
@@ -877,9 +877,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, Bangalore, Karnataka</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8683045908</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>secretcoder@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>laxmi chowk, Hinjewadi phase 1, pune/p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8483848870</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>bhushangadekar74@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -897,7 +897,7 @@
                                 placeholder="Your email" required>
                             <button type="submit"
                                 class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"><a
-                                    href="mailto:keertidvcorai@gmail.com">Subscribe</a></button>
+                                    href="mailto:bhushangadekar74@gmail.com">Subscribe</a></button>
                         </form>
                     </div>
                 </div>
@@ -907,7 +907,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="index.html">Secret Coder</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="index.html">Bhushan Coder</a>, All Right Reserved.
 
                     </div>
                 </div>
