--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>laxmi chowk, Hinjewadi phase 1, pune/p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>laxmi chowk, Hinjewadi phase 1, pune</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8483848870</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>bhushangadekar74@gmail.com</p>
                     <div class="d-flex pt-2">
